compiler/parser/src/snapshots/rustpython_parser__function__tests__function_kw_only_args.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..23,
            custom: (),
            node: FunctionDef {
                name: "f",
                args: Arguments {
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [
                        Located {
                            range: 9..10,
                            custom: (),
                            node: ArgData {
                                arg: "a",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 12..13,
                            custom: (),
                            node: ArgData {
                                arg: "b",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 15..16,
                            custom: (),
                            node: ArgData {
                                arg: "c",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Located {
                        range: 19..23,
                        custom: (),
                        node: Pass,
                    },
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        },
    ],
)
