compiler/parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..32,
            custom: (),
            node: FunctionDef {
                name: "f",
                args: Arguments {
                    posonlyargs: [],
                    args: [
                        Located {
                            range: 6..7,
                            custom: (),
                            node: ArgData {
                                arg: "a",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 9..10,
                            custom: (),
                            node: ArgData {
                                arg: "b",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 12..13,
                            custom: (),
                            node: ArgData {
                                arg: "c",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [
                        Located {
                            range: 18..19,
                            custom: (),
                            node: ArgData {
                                arg: "d",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 21..22,
                            custom: (),
                            node: ArgData {
                                arg: "e",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 24..25,
                            custom: (),
                            node: ArgData {
                                arg: "f",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Located {
                        range: 28..32,
                        custom: (),
                        node: Pass,
                    },
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        },
    ],
)
