compiler/parser/src/snapshots/rustpython_parser__function__tests__function_pos_and_kw_only_args_with_defaults.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..38,
            custom: (),
            node: FunctionDef {
                name: "f",
                args: Arguments {
                    posonlyargs: [],
                    args: [
                        Located {
                            range: 6..7,
                            custom: (),
                            node: ArgData {
                                arg: "a",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 9..10,
                            custom: (),
                            node: ArgData {
                                arg: "b",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 12..13,
                            custom: (),
                            node: ArgData {
                                arg: "c",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [
                        Located {
                            range: 18..19,
                            custom: (),
                            node: ArgData {
                                arg: "d",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 21..22,
                            custom: (),
                            node: ArgData {
                                arg: "e",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 27..28,
                            custom: (),
                            node: ArgData {
                                arg: "f",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    kw_defaults: [
                        Located {
                            range: 23..25,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    20,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 29..31,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    30,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Located {
                        range: 34..38,
                        custom: (),
                        node: Pass,
                    },
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        },
    ],
)
