compiler/parser/src/snapshots/rustpython_parser__function__tests__function_pos_args_with_defaults.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..26,
            custom: (),
            node: FunctionDef {
                name: "f",
                args: Arguments {
                    posonlyargs: [],
                    args: [
                        Located {
                            range: 6..7,
                            custom: (),
                            node: ArgData {
                                arg: "a",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 9..10,
                            custom: (),
                            node: ArgData {
                                arg: "b",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                        Located {
                            range: 15..16,
                            custom: (),
                            node: ArgData {
                                arg: "c",
                                annotation: None,
                                type_comment: None,
                            },
                        },
                    ],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [
                        Located {
                            range: 11..13,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    20,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            range: 17..19,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    30,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
                body: [
                    Located {
                        range: 22..26,
                        custom: (),
                        node: Pass,
                    },
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
            },
        },
    ],
)
