compiler/parser/src/snapshots/rustpython_parser__function__tests__lambda_kw_only_args.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..20,
            custom: (),
            node: Expr {
                value: Located {
                    range: 0..20,
                    custom: (),
                    node: Lambda {
                        args: Arguments {
                            posonlyargs: [],
                            args: [],
                            vararg: None,
                            kwonlyargs: [
                                Located {
                                    range: 10..11,
                                    custom: (),
                                    node: ArgData {
                                        arg: "a",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                                Located {
                                    range: 13..14,
                                    custom: (),
                                    node: ArgData {
                                        arg: "b",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                                Located {
                                    range: 16..17,
                                    custom: (),
                                    node: ArgData {
                                        arg: "c",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                            ],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [],
                        },
                        body: Located {
                            range: 19..20,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            },
        },
    ],
)
